syntax = "proto3";

option go_package = "./v1";
option java_package = "com.nfehs.librarygames.net.pbs";
option java_outer_classname = "ChatProto";

service Chat {
  rpc Chat (stream ChatRequest) returns (stream ChatResponse) {}
}

message ChatRequest {
  string game_key = 1;
  string message = 2;
  bool public = 3;
}

message ChatResponse {
  string sender = 1;
  string message = 2;
}
